@@ -193,7 +193,7 @@ def populate_with_results(self):
         fields_to_fetch = [ i for i in fields_to_fetch if details[i] is None ]
     self.movie.fields_to_fetch = fields_to_fetch
     
-    self.movie.open_page(w['window'])
+    self.movie.get_movie(w['window'])
     self.movie.parse_movie()
 
     if 'year' in fields_to_fetch:
@@ -295,7 +295,7 @@ def get_from_web(self):
                 self.search_movie.title = gutils.remove_accents(title, 'utf-8')
             else:
                 self.search_movie.title = unicode(title, 'utf-8')
-        self.search_movie.search(self.widgets['add']['window'])
+        self.search_movie.search_movies(self.widgets['add']['window'])
         self.search_movie.get_searches()
         if len(self.search_movie.ids) == 1 and o_title and title:
             self.search_movie.url = self.search_movie.translated_url_search
@@ -303,7 +303,7 @@ def get_from_web(self):
                 self.search_movie.title = gutils.remove_accents(title, 'utf-8')
             else:
                 self.search_movie.title = unicode(title, 'utf-8')
-            self.search_movie.search(self.widgets['add']['window'])
+            self.search_movie.search_movies(self.widgets['add']['window'])
             self.search_movie.get_searches()
         self.show_search_results(self.search_movie)
     else:
